docs/haproxy-ingress/other/install.yaml
---
# Source: kubernetes-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress-kubernetes-ingress
  namespace: ns-haproxy-master
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: haproxy-ingress
    helm.sh/chart: kubernetes-ingress-1.46.1
    app.kubernetes.io/version: "3.1.14"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  
  type: ClusterIP
  ports:
    - name: stat
      port: 1024
      protocol: TCP
      targetPort: stat
    - name: admin
      port: 6060
      protocol: TCP
      targetPort: admin
  selector:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: haproxy-ingress
  externalIPs:
---
# Source: kubernetes-ingress/templates/controller-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: haproxy-ingress-kubernetes-ingress
  namespace: ns-haproxy-master
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: haproxy-ingress
    helm.sh/chart: kubernetes-ingress-1.46.1
    app.kubernetes.io/version: "3.1.14"
    app.kubernetes.io/managed-by: Helm
spec:
  minReadySeconds: 0
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-ingress
      app.kubernetes.io/instance: haproxy-ingress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-ingress
        app.kubernetes.io/instance: haproxy-ingress
        app-env: prod
        app-key: haproxy
    spec:
      enableServiceLinks: true
      serviceAccountName: haproxy-ingress-kubernetes-ingress
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        runAsUser:  1000
        runAsGroup: 1000
      containers:
        - name: kubernetes-ingress-controller
          image: "haproxytech/kubernetes-ingress:3.1.14"
          imagePullPolicy: IfNotPresent
          args:
          - --configmap=ns-haproxy-master/haproxy-ingress-kubernetes-ingress
          - --http-bind-port=8080
          - --https-bind-port=8443
          - --ingress.class=haproxy-master-lb
          - --publish-service=ns-haproxy-master/haproxy-ingress-kubernetes-ingress
          - --log=info
          - --prometheus
          - --pprof
          securityContext:
            runAsNonRoot: true
            runAsUser:  1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: admin
              containerPort: 6060
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: stat
              containerPort: 1024
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 20
            httpGet:
              path: /healthz
              port: 1042
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 400Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
              subPath: tmp
            - name: tmp
              mountPath: /run
              subPath: run
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
---
# Source: kubernetes-ingress/templates/controller-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy-master-lb
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: haproxy-ingress
    helm.sh/chart: kubernetes-ingress-1.46.1
    app.kubernetes.io/version: "3.1.14"
    app.kubernetes.io/managed-by: Helm
spec:
  controller: haproxy.org/ingress-controller/haproxy-master-lb
---
# Source: kubernetes-ingress/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-haproxy-master
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: haproxy-ingress
    helm.sh/chart: kubernetes-ingress-1.46.1
    app.kubernetes.io/version: "3.1.14"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": "pre-install"
    "helm.sh/hook-weight": "-1"
