docs/haproxy-ingress/other/network-policy.yaml
#=====================================================================
# 1. DEFAULT DENY ALL
#=====================================================================
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: ns-haproxy-master
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
#=====================================================================
# 2. EGRESS: DNS + kube-api
#=====================================================================
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: ns-haproxy-master
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-haproxy
  namespace: ns-haproxy-master
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-ingress
      app.kubernetes.io/instance: haproxy-ingress
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 6443
